[gd_scene load_steps=13 format=3 uid="uid://cbtn20bbwv82e"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_ic2ac"]
[ext_resource type="Texture2D" uid="uid://dxbt7ao3nrx11" path="res://sky.png" id="2_pgsaq"]
[ext_resource type="PackedScene" uid="uid://wbitj51oxpcl" path="res://scenes/water/water.tscn" id="5_atp4k"]
[ext_resource type="PackedScene" uid="uid://h34sx160mibk" path="res://scenes/ball/ball_detector.tscn" id="6_la3gu"]
[ext_resource type="PackedScene" uid="uid://cloceipxeh5hb" path="res://scenes/net/net.tscn" id="7_dsowd"]
[ext_resource type="PackedScene" uid="uid://x700fwofdsyk" path="res://scenes/ball/ball_shadow.tscn" id="8_5pich"]
[ext_resource type="FontFile" uid="uid://bgw0utnyv6d12" path="res://fonts/KOMIKAX_.ttf" id="9_hp6g6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tcxu"]
size = Vector2(152, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxtpa"]
size = Vector2(312, 227)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrflj"]
size = Vector2(20, 337.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0he6"]
size = Vector2(354, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6wui"]
size = Vector2(4, 194)

[node name="Game" type="Node2D" node_paths=PackedStringArray("kickoff1", "kickoff2", "water_left", "water_right")]
script = ExtResource("1_ic2ac")
kickoff1 = NodePath("KickoffPositions/Node2D")
kickoff2 = NodePath("KickoffPositions/Node2D2")
water_left = NodePath("WaterLeft")
water_right = NodePath("WaterRight")

[node name="SkySprite" type="Sprite2D" parent="."]
position = Vector2(156, 128)
texture = ExtResource("2_pgsaq")
metadata/_edit_lock_ = true

[node name="Fishes" type="Node2D" parent="."]

[node name="Spawns" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Spawns"]
position = Vector2(48, 224)

[node name="Node2D2" type="Node2D" parent="Spawns"]
position = Vector2(240, 224)

[node name="WaterLeft" parent="." node_paths=PackedStringArray("ball_detector") instance=ExtResource("5_atp4k")]
position = Vector2(75, 211)
ball_detector = NodePath("../BallDetectorLeft")

[node name="BallDetectorLeft" parent="." instance=ExtResource("6_la3gu")]
visible = false
position = Vector2(80, 120)

[node name="CollisionShape2D" parent="BallDetectorLeft/Area2D" index="0"]
position = Vector2(-4, -24)
shape = SubResource("RectangleShape2D_7tcxu")

[node name="WaterRight" parent="." node_paths=PackedStringArray("ball_detector") instance=ExtResource("5_atp4k")]
position = Vector2(237, 211)
ball_detector = NodePath("../BallDetectorRight")

[node name="BallDetectorRight" parent="." instance=ExtResource("6_la3gu")]
visible = false
position = Vector2(240, 120)

[node name="CollisionShape2D" parent="BallDetectorRight/Area2D" index="0"]
position = Vector2(-8, -24)
shape = SubResource("RectangleShape2D_7tcxu")

[node name="AirArea" type="Area2D" parent="."]
visible = false
position = Vector2(156, 90)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AirArea"]
position = Vector2(0, -38.5)
shape = SubResource("RectangleShape2D_kxtpa")

[node name="Net" parent="." instance=ExtResource("7_dsowd")]
position = Vector2(156, 196)

[node name="BallShadow" parent="." instance=ExtResource("8_5pich")]
position = Vector2(88, 167)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/ScoreControl"]
layout_mode = 0
offset_left = 124.0
offset_top = 47.0
offset_right = 189.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.92549, 0.752941, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_hp6g6")
theme_override_font_sizes/font_size = 20
text = "score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/ScoreControl"]
layout_mode = 0
offset_left = 130.0
offset_top = 75.0
offset_right = 184.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_hp6g6")
theme_override_font_sizes/font_size = 20
text = "0 - 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -23.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92549, 0.321569, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_hp6g6")
theme_override_font_sizes/font_size = 20
text = "PLAYER 1 Won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldLimits" type="Node2D" parent="."]
visible = false

[node name="WorldLimit" type="StaticBody2D" parent="WorldLimits"]
position = Vector2(-11, 129)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimit"]
position = Vector2(0, -22.25)
shape = SubResource("RectangleShape2D_lrflj")

[node name="WorldLimit2" type="StaticBody2D" parent="WorldLimits"]
position = Vector2(322, 128)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimit2"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_lrflj")

[node name="WorldLimit3" type="StaticBody2D" parent="WorldLimits"]
position = Vector2(156, -8)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimit3"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_l0he6")

[node name="WorldLimit4" type="StaticBody2D" parent="WorldLimits"]
position = Vector2(156, 265)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimit4"]
shape = SubResource("RectangleShape2D_l0he6")

[node name="WorldLimit5" type="StaticBody2D" parent="WorldLimits"]
visible = false
position = Vector2(157, 24)
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimit5"]
position = Vector2(-1, 57)
shape = SubResource("RectangleShape2D_c6wui")

[node name="KickoffPositions" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="KickoffPositions"]
position = Vector2(88, 154)

[node name="Node2D2" type="Node2D" parent="KickoffPositions"]
position = Vector2(219, 155)

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="CompleteMatchTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[editable path="BallDetectorLeft"]
[editable path="BallDetectorRight"]
